Add note about learn section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@ Jonathan Hart, Maurice Granton, Julius Johnson, Jamee Johnson, Michael Dean…
   <a href=https://eji.org>The Equal Justice Initiative</a>,
   <a href=https://www.wetheprotesters.org>We The Protesters</a>, and the
   <a href=https://www.gofundme.com/f/georgefloyd>George Floyd Memorial Fund</a>.
+<p>The learn section is still available on
+  <a href=https://github.com/unifiedjs/unifiedjs.github.io/tree/src/doc/learn>the GitHub repo</p>.
 <p>This page is inspired by and adapted from
   <a href=https://www.django-rest-framework.org>the Django Rest Framework’s homepage</a>.
