--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Philando Castile, Terrence Sterling, Terence Crutcher, Keith Lamont Scott, Alfre
 Jordan Edwards, Stephon Clark, Danny Ray Thomas, DeJuan Guillory, Patrick Harmon,
 Jonathan Hart, Maurice Granton, Julius Johnson, Jamee Johnson, Michael Dean…
 <p>The website is currently offline, as a small mark of respect, and expression of solidarity.
+<p>The learn section is still available on
+  <a href=https://github.com/unifiedjs/unifiedjs.github.io/tree/src/doc/learn>the GitHub repo</a>.
 <p>Organizations that could use your financial support include
   <a href=https://blacklivesmatter.com>Black Lives Matter</a>,
   <a href=https://www.naacpldf.org>The NAACP Legal Defense and Educational Fund</a>,
@@ -40,7 +42,5 @@ Jonathan Hart, Maurice Granton, Julius Johnson, Jamee Johnson, Michael Dean…
   <a href=https://eji.org>The Equal Justice Initiative</a>,
   <a href=https://www.wetheprotesters.org>We The Protesters</a>, and the
   <a href=https://www.gofundme.com/f/georgefloyd>George Floyd Memorial Fund</a>.
-<p>The learn section is still available on
-  <a href=https://github.com/unifiedjs/unifiedjs.github.io/tree/src/doc/learn>the GitHub repo</p>.
 <p>This page is inspired by and adapted from
   <a href=https://www.django-rest-framework.org>the Django Rest Framework’s homepage</a>.
